[package]
name = "tree_hash"
version = "0.1.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Efficient Merkle-hashing as used in Ethereum 2.0"

[dev-dependencies]
rand = "0.7"
tree_hash_derive = "0.1"

[dependencies]
ethereum-types = "0.5"
eth2_hashing = "0.1"
lazy_static = "0.1"
